--- a/src/app/api/apiHeader.html
+++ b/src/app/api/apiHeader.html
@@ -28,7 +28,7 @@
 		</p>
 		<p>
 			<span><ng-md-icon icon="person"></ng-md-icon></span>
-			<span>{{apiCtrl.api.author}}</span>
+			<span>{{apiCtrl.api.owner.username}}</span>
 			<span><ng-md-icon icon="timer"></ng-md-icon></span>
 			<span>{{apiCtrl.api.created_at | date}}</span>
     </p>
