--- a/src/app/application/details/application.scss
+++ b/src/app/application/details/application.scss
@@ -44,6 +44,11 @@
 	background-size: cover;
 }
 
+.gravitee-application-header-content-right {
+	color: white;
+	fill: white;
+}
+
 .gravitee-application-header-content {
 	color: white;
 	padding-left: 20px !important;
