--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -128,6 +128,11 @@ ng-md-icon {
   background-color: transparent !important;
 }
 
+.gravitee-card:hover {
+	box-shadow: 0 7px 8px -4px rgba(0,0,0,.2),0 12px 17px 2px rgba(0,0,0,.14),0 5px 22px 4px rgba(0,0,0,.12);
+  z-index: 1;
+}
+
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
