--- a/src/app/api/admin/members.html
+++ b/src/app/api/admin/members.html
@@ -25,20 +25,22 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="member in apiCtrl.members">
-        <td>{{member.user}}</td>
+      <tr ng-repeat="member in apiCtrl.members | filter: { type: '!primary_owner' } | orderBy: order">
+        <td ng-switch="member.type">
+					<span ng-switch-when="primary_owner"><b>{{member.user}}</b></span>
+					<span ng-switch-default>{{member.user}}</span>
+				</td>
         <td ng-show="member.type != 'primary_owner'">
-					<md-select ng-model="member.type" placeholder="Other">
+					<md-select ng-model="member.type" placeholder="Other" ng-change="apiCtrl.updateMember(member)">
 		        <md-option ng-value="type" ng-repeat="type in apiCtrl.membershipTypes">{{type}}</md-option>
 		      </md-select>
 				</td>
 				<td ng-hide="member.type != 'primary_owner'">
-					<span ng-hide="member.type != 'primary_owner'">{{member.type}}</span>
+					<span ng-hide="member.type != 'primary_owner'"><b>{{member.type}}</b></span>
         </td>
         <td>
 					<div ng-if="member.type != 'primary_owner'">
-						<ng-md-icon ng-click="apiCtrl.updateMember(member)" icon="save" size="24" style="cursor: pointer;"></ng-md-icon>
-						<ng-md-icon ng-click="apiCtrl.deleteMember(member)" icon="delete" size="24" style="cursor: pointer;"></ng-md-icon>
+						<ng-md-icon ng-click="apiCtrl.showDeleteMemberConfirm($event, member)" icon="delete" size="24" style="cursor: pointer;"></ng-md-icon>
 					</div>
 				</td>
       </tr>
