fix: fix autofocus on application api subscribe dialog

--- a/src/app/application/dialog/subscribeApi.dialog.html
+++ b/src/app/application/dialog/subscribeApi.dialog.html
@@ -36,7 +36,7 @@
 				    md-items="item in apis"
 				    md-item-text="item.name"
 				    md-min-length="0"
-						md-autofocus="true"
+						md-autofocus="false"
 				    placeholder="Search APIs ..."
 						md-menu-class="autocomplete-custom-template">
       		
