refactor: add login dialog form + add apis count and members count to application card

--- a/src/app/application/applicationsThumbMode.html
+++ b/src/app/application/applicationsThumbMode.html
@@ -27,13 +27,13 @@
 					<div layout="row">
 						<div class="border-right" flex>
 							<div class="description-block">
-								<h5 class="description-header">-</h5>
+								<h5 class="description-header">{{application.apis_size}}</h5>
 								<span class="description-text">APIS</span>
 							</div>
 						</div>
 						<div flex>
 							<div class="description-block">
-								<h5 class="description-header">-</h5>
+								<h5 class="description-header">{{application.members_size}}</h5>
 								<span class="description-text">MEMBERS</span>
 							</div>
 						</div>
