--- a/src/app/application/dialog/application.dialog.html
+++ b/src/app/application/dialog/application.dialog.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<md-dialog aria-label="New application">
+<md-dialog aria-label="New application" style="width: 60%">
   <form name="formApplication" ng-submit="create(application)" novalidate>
     <md-toolbar>
       <div class="md-toolbar-tools">
