--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -22,27 +22,8 @@
   <span ng-if="authenticated" ncy-breadcrumb></span>
 	<span flex></span>
 	<div class="navbar-login" ng-if="!authenticated">
-		<md-menu>
-			<md-button aria-label="Login form" ng-click="navbarCtrl.openMenu($mdOpenMenu, $event)">
-				<ng-md-icon md-menu-origin icon="login"></ng-md-icon> Login
-			</md-button>
-			<md-menu-content width="4" layout-padding>
-				<form name="formUser" ng-submit="navbarCtrl.login()" class="gravitee-login-container" style="padding-top:20px;">
-        	<md-input-container class="md-icon-float">
-            <label>Login</label>
-            <input ng-model="navbarCtrl.user.username" type="text" ng-required="true">
-        	</md-input-container>
-
-        	<md-input-container class="md-icon-float">
-            <label>Password</label>
-            <input ng-model="navbarCtrl.user.password" type="password" ng-required="true">
-        	</md-input-container>
-
-        	<md-button type="submit" class="md-raised md-primary md-button md-ink-ripple" ng-disabled="formUser.$invalid">
-            Login
-        	</md-button>
-      	</form>
-			</md-menu-content>
-		</md-menu>
+		<md-button aria-label="Login form" ng-click="navbarCtrl.showLoginModal($event)">
+			<ng-md-icon md-menu-origin icon="login"></ng-md-icon> Login
+		</md-button>
 	</div>
 </md-toolbar>
