--- a/src/app/api/admin/apiPolicies.html
+++ b/src/app/api/admin/apiPolicies.html
@@ -78,8 +78,8 @@
         <md-divider></md-divider>
       </div>
       <form name="projectForm" novalidate>
-        <div layout="row" layout-wrap>
-          <span flex="20" class="badge gravitee-policy-method-badge-info"
+        <div layout="row" layout-align="start center" layout-wrap>
+          <span flex="10" class="badge gravitee-policy-method-badge-info"
                 ng-class="apiPoliciesCtrl.getHttpMethodClass(httpMethod, apiPoliciesCtrl.selectedApiPolicy.methods)"
                 ng-repeat="httpMethod in apiPoliciesCtrl.httpMethods"
                 ng-click="apiPoliciesCtrl.toggleHttpMethod(httpMethod, apiPoliciesCtrl.selectedApiPolicy.methods)">
@@ -104,20 +104,17 @@
             </md-select>
           </span>
         </md-input-container>
-        <button class="md-raised md-warn md-button" ng-click="apiPoliciesCtrl.removePolicy();">Remove</button>
+        <md-button class="md-warn pull-right" type="button" ng-click="apiPoliciesCtrl.removePolicy()">Remove</md-button>
       </form>
     </div>
   </div>
 </div>
-<div layout="row">
-  <div flex="100">
-    <div class="md-actions gravitee-api-save-button" layout="row">
-      <md-button class="md-accent" type="button" ng-click="apiPoliciesCtrl.savePaths();">
-        Save
-      </md-button>
-      <md-button class="md-warn" type="button">
-        Reset
-      </md-button>
-    </div>
-  </div>
+
+<div class="md-actions gravitee-api-save-button" layout="row">
+  <md-button  class="md-raised" ng-click="apiPoliciesCtrl.savePaths();">
+    Save
+  </md-button>
+  <md-button class="md-warn" type="button" ng-click="apiPoliciesCtrl.reset()">
+    Reset
+  </md-button>
 </div>
