refactor: Keep the same naming as we used for API

--- a/src/app/application/details/application.html
+++ b/src/app/application/details/application.html
@@ -34,7 +34,7 @@
 
 	<md-tabs md-dynamic-height md-border-bottom md-selected="selectedTab">
 		<md-tab label="general" ui-sref="application.general"></md-tab>
-		<md-tab label="apis" ui-sref="application.apis"></md-tab>
+		<md-tab label="api keys" ui-sref="application.apikeys"></md-tab>
 		<md-tab label="members" ui-sref="application.members"></md-tab>
 	</md-tabs>
 
