--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -90,7 +90,7 @@ $flowRadius: 120px;
 }
 
 .gravitee-api-page-menu-item {
-  cursor: move;
+  cursor: pointer;
   margin-left: 0;
   min-width: 0;
   padding: 0 10px;
