--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -54,3 +54,16 @@
 		</a>
 	</div>
 </div>
+
+<div ng-if="apisCtrl.apis.length == 0" style="text-align:center; color: #424E5A; fill: #424E5A; ">
+	<h1><ng-md-icon size="48" icon="error"></ng-md-icon> Hmm, no API That's weird.</h1>
+	<div>
+		<p>
+			Start using Gravitee.IO portal
+		</p>
+		<p>
+			<md-button class="md-raised" ng-click="apisCtrl.createInitAPI()">Create APIs</md-button>
+			<md-button ng-if="!authenticated" class="md-raised" ng-click="apisCtrl.login()">Login</md-button>
+		</p>
+	</div>
+</div>
