refactor: change homepage title color and font

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -7,7 +7,6 @@
 }
 
 .landing-header-image-text {
-	font-family: 'Whitney SSm A', 'Whitney SSm B', 'Open Sans', 'sans-serif';
 	color:white;
 }
 
@@ -17,7 +16,7 @@
 
 .landing-header-image-text h3 {
 	margin-top: 0px;
-	color: #424E5A;
+	color: #d3d3d3;
 }
 
 .landing-header-content ul > li {
