--- a/src/app/api/admin/documentation/apiDocumentation.html
+++ b/src/app/api/admin/documentation/apiDocumentation.html
@@ -26,6 +26,8 @@
               <img ng-if="'SWAGGER' === page.type" src="app/images/logo_swagger.png" width="32px" />
               <img ng-if="'RAML' === page.type" src="app/images/logo_raml.png" width="32px" />
               {{page.name}}
+              <ng-md-icon ng-if="page.published" icon="radio_button_on"></ng-md-icon>
+              <ng-md-icon ng-if="!page.published" icon="radio_button_off"></ng-md-icon>
             </div>
           </md-button>
         </md-item-content>
