--- a/src/app/api/apisList.html
+++ b/src/app/api/apisList.html
@@ -18,7 +18,7 @@
 <section class="content-header">
 </section>  
 
-	<div layout="row" layout-align="end center" layout-padding>
+	<div ng-if="apisCtrl.apis.length > 0" layout="row" layout-align="end center" layout-padding>
 		<span class="btn-group">
 			<button ng-class="{'active': !apisCtrl.tableMode}" class="btn btn-default" 
 							ng-click="apisCtrl.changeMode(false)" type="button">
